log
Fri, Mar 28, 2025 10:59:28 AM: 
 list.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
